--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 ADD_EXECUTABLE(startingchessboard
-    src/startboard.cpp
+    src/board.cpp
     tests/test.cpp
 )
