--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 
-ADD_EXECUTABLE(startingchessboard
+add_subdirectory(googletest)
+
+ADD_EXECUTABLE(test
     src/board.cpp
+    src/game.cpp
+    src/piece.cpp
+    src/square.cpp
     tests/test.cpp
 )
+
+target_link_libraries(test gtest gtest_main)
