--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 
 add_subdirectory(googletest)
 
+project(chessGame)
+
 ADD_EXECUTABLE(test
     src/board.cpp
     src/game.cpp
@@ -10,4 +12,15 @@ ADD_EXECUTABLE(test
     tests/test.cpp
 )
 
+ADD_EXECUTABLE(testingMain
+    src/board.cpp
+    src/game.cpp
+    src/piece.cpp
+    src/square.cpp
+    tests/testmain.cpp
+)
+
 target_link_libraries(test gtest gtest_main)
+
+target_link_libraries(testingMain gtest gtest_main)
+
